[package]
name = "char-image"
version = "0.1.0"
authors = ["aristotle9 <lanfan.1987@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2"
freetype = { git = "https://github.com/servo/rust-freetype.git" }
png = { git = "https://github.com/servo/rust-png.git" }
iron = "0.2"
url = "0.2"
params = "0.0"
